--- a/styles/account.css
+++ b/styles/account.css
@@ -5,18 +5,22 @@
 
 .Account_sidebar {
     width      : 270px;
-    flex-shrink: 1;
+    border-radius : 18px;
+    grid-area: 2 / 2 / 3 / 3;
     background: linear-gradient(156.35deg, rgba(175, 182, 186, 0.12) 0%, rgba(175, 182, 186, 0.21) 100%);
     border: 1px solid;
     border-image-source: linear-gradient(156.35deg, rgba(175, 182, 186, 0.5) 0%, rgba(175, 182, 186, 0) 67.19%);
-    border-radius : 18px;
 }
 
 .Account_controls {
     display: flex;
-    width: 100%;
     margin-bottom: 17px;
     margin-top: 0;
+}
+
+.Account_header {
+    width: 100%;
+    grid-area: 1 / 1 / 2 / 3;
 }
 
 .FamilyLk_info {
@@ -24,14 +28,14 @@
 }
 
 .Account_main {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 270px;
+    grid-template-rows: auto auto auto auto;
 }
 
-.Account_gifts {
-    flex-grow: 1;
+.Account_body {
     margin-right: 20px;
+    grid-area: 2 / 1 / 5 / 2;
 }
 
 .InfoBlock_block {
@@ -39,23 +43,27 @@
     line-height   : 1.2;
     color         : #333a4a;
     font-weight   : 500;
-    min-height    : 340px
+    min-height    : 340px;
 }
 
 .InfoBlock_label {
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translate(-50%);
     display      : inline-flex;
     align-items  : center;
     padding      : 2px 7px;
-    background   : var(--primary);
+    background   : #2147aa;
     border-radius: 40px 60px 12px 40px;
     font-size    : 11px;
     line-height  : 13px;
     color        : #fff;
     margin-bottom: 9px
+}
+
+.GiverAccount_sidebar .InfoBlock_label {
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: var(--primary);
 }
 
 .InfoBlock_plus {
@@ -85,13 +93,14 @@
     color    : #999b9f
 }
 
-.InfoBlock_giftList {
-    display: flex;
-    margin-bottom: 24px
+.InfoBlock_gifts {
+    margin-bottom: 5px;
 }
 
-.InfoBlock_giftList .InfoBlock_text {
-    margin-right: 50px;
+.InfoBlock_giftList {
+    display: flex;
+    margin-bottom: 24px;
+    justify-content: space-between;
 }
 
 .InfoBlock_separator {
@@ -191,6 +200,28 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.SwitchTabs_block {
+    padding      : 28px 20px 20px;
+    background   : linear-gradient(156.35deg, hsla(202, 7%, 71%, .12), hsla(202, 7%, 71%, .21));
+    border-radius: 18px;
+    grid-area: 3 / 2 / 4 / 3;
+    width: 270px;
+}
+
+.SwitchTabs_newAction {
+    width        : 100%;
+    display      : block;
+    text-align   : center;
+    background   : var(--primary);
+    padding      : 12px 5px;
+    border: none;
+    border-radius: 32px;
+    font-weight  : 600;
+    font-size    : 14px;
+    line-height  : 120%;
+    color        : var(--white)
 }
 
 
@@ -308,41 +339,31 @@
     .Gifts {
         grid-template-columns: 1fr;
     }
-
-    .Account_gifts {
-        flex-basis: 60%;
-    }
-
-    .Account_sidebar {
-        flex-basis: 30%;
-    }
 }
 
-@media (max-width: 761px) {
-    .Account_gifts {
-        flex-basis: 45%;
+@media (max-width: 700px) {
+
+    .Account_main {
+        grid-template-columns: 1fr;
     }
 
-    .Account_sidebar {
-        flex-basis: 45%;
+    .Account_header {
+        grid-area: 2 / 1 / 3 / 2;
     }
-}
 
-@media (max-width: 670px) {
     .Default_defaultContainer.Account_container {
         padding-top: 20px;
         padding-bottom: 20px;
     }
 
     .Account_sidebar {
-        flex-basis: 100%;
         height: 134px;
         margin-bottom: 30px;
-        order: 1;
+        grid-area: 1 / 1 / 2 / 2;
+        width: 100%;
     }
 
     .Account_controls {
-        order: 2;
         justify-content: space-between;
     }
 
@@ -350,12 +371,14 @@
         padding: 8px 0;
     }
 
-    .Account_gifts {
-        order: 3;
+    .Account_body {
+        margin-right: 0;
+        grid-area: 3 / 1 / 4 / 2;
     }
 
-    .Account_gifts {
-        margin: 0;
+    .SwitchTabs_block {
+        width: 100%;
+        grid-area: 4 / 1 / 5 / 2;
     }
 
     .InfoBlock_more {
@@ -387,4 +410,217 @@
 
 .Account_sidebar._full {
     height: auto;
+}
+
+
+.CurrentNeeds_header {
+    display      : flex;
+    align-items  : center;
+    margin-bottom: 18px
+}
+
+.CurrentNeeds_title {
+    margin-left : 7px;
+    margin-right: 30px;
+    font-weight : 600;
+    font-size   : 18px;
+    color       : #333a4a
+}
+
+.CurrentNeeds_title > span {
+    margin-left: 30px;
+    color: #999B9F;
+}
+
+.CurrentNeeds_subtitle {
+    font-weight: 600;
+    font-size  : 18px;
+    color      : #999b9f
+}
+
+.CurrentNeeds_card {
+    background   : #fff;
+    border-radius: 10px
+}
+
+.Need_product {
+    min-height   : 64px;
+    padding      : 16px 16px 16px 20px;
+    width        : calc((100% - 1 * 10px) / 2);
+    background   : #edf1f3;
+    border-radius: 10px;
+    display      : flex;
+    align-items  : center;
+    color        : #292929
+}
+
+.Need_product .Need_title {
+    font-weight : 500;
+    font-size   : 14px;
+    margin-right: auto
+}
+
+.Need_statusNull {
+    color: #afb6ba
+}
+
+.Need_btnTip {
+    background  : none;
+    border      : none;
+    line-height : 0;
+    margin-right: 10px
+}
+
+.Need_tip {
+    font-weight   : 600;
+    font-size     : 13px;
+    line-height   : 110%;
+    text-align    : center;
+    letter-spacing: -.01em;
+    color         : #292929
+}
+
+.Need_modalBlock {
+    padding       : 26px 58px;
+    display       : flex;
+    flex-direction: column;
+    align-items   : center
+}
+
+.Need_modalTitle {
+    text-align   : center;
+    font-weight  : 600;
+    font-size    : 22px;
+    line-height  : 120%;
+    color        : #292929;
+    margin-bottom: 30px
+}
+
+.Need_btnConfirm {
+    background: transparent;
+    color     : #009048;
+    padding      : 5px 9px;
+    display      : block;
+    border       : 1px solid #009048;
+    border-radius: 7px;
+    cursor       : pointer;
+    font-weight  : 700;
+    font-size    : 12px;
+    line-height  : 120%;
+    transition   : all .2s ease-in-out;
+    margin-right : 14px
+}
+
+.Need_btnConfirm:hover {
+    background   : #009048;
+    color        : #fff;
+}
+
+.Need_btnProblem {
+    padding   : 0;
+    background: none;
+    border    : none;
+    cursor    : pointer
+}
+
+.Need_btnProblem:hover svg {
+    fill: var(--primary)
+}
+
+.Need_textDone {
+    font-weight: 700;
+    font-size  : 12px;
+    line-height: 120%;
+    color      : #009048;
+    margin     : 0;
+}
+
+.Need_textConfirmed,
+.Need_textNull {
+    font-weight: 700;
+    font-size  : 12px;
+    line-height: 120%;
+    color      : #afb6ba;
+    margin     : 0
+}
+
+.Need_textarea {
+    margin-bottom: 50px
+}
+
+.Need_textareaTitle {
+    width         : 100%;
+    padding-bottom: 10px;
+    font-size     : 13px;
+    display       : block;
+    color         : #999b9f
+}
+
+.NeedsCard_subtitle {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.NeedsCard_photo {
+    margin-right: 10px;
+    width: 36px;
+    height: 36px;
+}
+
+.NeedsCard_photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 999px;
+}
+
+.NeedsCard_products {
+    display    : flex;
+    gap        : 10px;
+    align-items: flex-start;
+    flex-wrap  : wrap;
+    margin-bottom: 10px;
+}
+
+.NeedsCard_btn {
+    text-align: center; 
+    display: block; 
+    border: none; 
+    padding: 15px 55px; 
+    border-radius: 30px; 
+    color: var(--text-white); 
+    background: var(--primary); 
+    font-weight: 600; 
+    font-size: 14px;
+}
+
+.NeedsCard_content {
+    margin-bottom: 50px;
+}
+
+.NeedsCard_content:last-child {
+    margin-bottom: 0;
+}
+
+.NeedsCard_footer .Simple_simpleButtonRoot {
+    text-transform:none;
+}
+
+@media screen and (max-width:991px) {
+    .Need_product {
+        width: 100%
+    }
+
+    .Need_modalBlock {
+        padding: 0
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .CurrentNeeds_title span span{
+        display: none;
+    }
 }
