--- a/styles/style.css
+++ b/styles/style.css
@@ -6903,27 +6903,6 @@
     }
 }
 
-
-
-.SwitchTabs_block {
-    padding      : 28px 20px 20px;
-    background   : linear-gradient(156.35deg, hsla(202, 7%, 71%, .12), hsla(202, 7%, 71%, .21));
-    border-radius: 18px
-}
-
-.SwitchTabs_newAction {
-    width        : 100%;
-    display      : block;
-    text-align   : center;
-    background   : var(--primary);
-    padding      : 12px 5px;
-    border-radius: 32px;
-    font-weight  : 600;
-    font-size    : 14px;
-    line-height  : 120%;
-    color        : var(--white)
-}
-
 .Dropzone_block {
     border         : 1px dashed #d6d6d6;
     min-height     : 288px;
@@ -7361,7 +7340,9 @@
 }
 
 .NeedsCard_otherTitle {
-    margin-bottom: 15px
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .NeedsCard_otherProducts {
@@ -7377,31 +7358,6 @@
     .NeedsCard_footer {
         padding: 20px
     }
-}
-
-.CurrentNeeds_header {
-    display      : flex;
-    align-items  : center;
-    margin-bottom: 18px
-}
-
-.CurrentNeeds_title {
-    margin-left : 7px;
-    margin-right: 30px;
-    font-weight : 600;
-    font-size   : 18px;
-    color       : #333a4a
-}
-
-.CurrentNeeds_subtitle {
-    font-weight: 600;
-    font-size  : 18px;
-    color      : #999b9f
-}
-
-.CurrentNeeds_card {
-    background   : #fff;
-    border-radius: 10px
 }
 
 .ArchiveNeeds_header {
@@ -7428,6 +7384,7 @@
     background   : #fff;
     border-radius: 10px
 }
+
 
 .form_qr.hide {
     display: none;
