--- a/styles/form.css
+++ b/styles/form.css
@@ -2317,12 +2317,12 @@ button.sv-action-bar-item {
     font-weight: var(--sjs-font-editorfont-weight,400);
     color: var(--sjs-font-editorfont-color,var(--sjs-general-forecolor,rgba(0,0,0,.91)));
     font-size: var(--sjs-internal-font-editorfont-size);
-    background-color: var(--sjs-editorpanel-backcolor,var(--sjs-editor-background,var(--sjs-general-backcolor-dim-light,var(--background-dim-light,#f9f9f9))));
+    background-color: #F0F2F5;
     border: none;
-    border-radius: var(--sjs-editorpanel-cornerRadius,var(--sjs-corner-radius,4px));
+    border-radius: 10px;
     text-align: start;
-    box-shadow: var(--sjs-shadow-inner,inset 0 1px 2px 0 rgba(0,0,0,.15)),0 0 0 0 var(--sjs-primary-backcolor,var(--primary,#19b394));
-    transition: box-shadow var(--sjs-transition-duration,.15s)
+    /* box-shadow: var(--sjs-shadow-inner,inset 0 1px 2px 0 rgba(0,0,0,.15)),0 0 0 0 var(--sjs-primary-backcolor,var(--primary,#19b394)); */
+    /* transition: box-shadow var(--sjs-transition-duration,.15s) */
 }
 
 .sd-input:focus {
@@ -2812,6 +2812,10 @@ input.sd-input:disabled:not(.sd-input--disabled),textarea.sd-input:disabled:not(
 
 .sd-root-modern:not(.sd-root-modern--mobile) .sd-table--alternate-rows .sd-table__row:nth-of-type(odd) td:first-of-type .sd-item:not(.sd-item--error).sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after,.sd-root-modern:not(.sd-root-modern--mobile) .sd-table--alternate-rows .sd-table__row:nth-of-type(odd)>td.sd-table__cell:not(.sd-table__cell--actions) .sd-item:not(.sd-item--error).sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
     background-color: var(--sjs-primary-forecolor,var(--primary-foreground,#fff))
+}
+
+.sd-item__decorator {
+    cursor: pointer;
 }
 
 .sd-table__cell {
@@ -3389,7 +3393,7 @@ input.sd-input:disabled:not(.sd-input--disabled),textarea.sd-input:disabled:not(
 }
 
 .sd-item--checked .sd-item__decorator {
-    box-shadow: none
+    box-shadow: none;
 }
 
 .sd-item__control:focus+.sd-item__decorator {
@@ -3404,7 +3408,8 @@ input.sd-input:disabled:not(.sd-input--disabled),textarea.sd-input:disabled:not(
 }
 
 .sd-item--checked .sd-item__decorator {
-    background: var(--sjs-primary-backcolor,var(--primary,#19b394))
+    background: var(--sjs-primary-backcolor,var(--primary,#19b394));
+    border: none;
 }
 
 .sd-item__control-label {
@@ -3488,7 +3493,9 @@ input.sd-input:disabled:not(.sd-input--disabled),textarea.sd-input:disabled:not(
 }
 
 .sd-checkbox__decorator {
-    border-radius: calc(.5*(var(--sjs-corner-radius, 4px)))
+    border-radius: calc(.5*(var(--sjs-corner-radius, 4px)));
+    border: solid 2px #292929;
+    border-radius: 5px;
 }
 
 .sd-checkbox__svg {
@@ -3515,7 +3522,9 @@ input.sd-input:disabled:not(.sd-input--disabled),textarea.sd-input:disabled:not(
 }
 
 .sd-radio__decorator {
-    border-radius: 50%
+    border-radius: 50%;
+    box-shadow: none;
+    border: solid 2px #FF3351;
 }
 
 .sd-radio__decorator:after {
