--- a/styles/common.css
+++ b/styles/common.css
@@ -3,6 +3,16 @@
     width: 100%
 }
 
+.multi-next, .multi-prev {
+    
+    position: absolute; z-index: 999; top: 50%; right: 20px; transform: translateY(-50%)
+}
+
+.multi-prev {
+    left: 20px;
+    right: auto;
+}
+
 .Carousel_imgCarousel {
     max-width    : 575px;
     height       : 575px;
@@ -103,18 +113,29 @@
     font-style    : normal;
     font-weight   : 700;
     font-size     : 14px;
-    line-height   : 20px;
+    line-height   : 17px;
     text-transform: uppercase;
-    color         : var(--gray-100);
+    color         : #292929;
     transition    : all .3s ease-in-out;
     display       : block;
     width         : 100%;
-    margin-top    : 10px;
+    margin-top    : 24px;
     text-align: left;
 }
 
 .AboutSubmenu_item:hover {
     color: var(--primary)
+}
+
+.AboutSubmenu_arrow {
+    height: 11px; width: 22px; position: absolute; background: transparent; color: rgb(255, 255, 255); z-index: -1; 
+    transform:  translateY(-100%) ; 
+    top: 0; 
+    left: 60px;
+
+}
+.AboutSubmenu_arrow path {
+    stroke-width: 3px;
 }
 
 .Header_headerLinkArrowButton:hover .popup-content {
@@ -124,7 +145,7 @@
 .Header_headerLinkArrowButton .popup-content,
 .Header_headerLinkArrowButton [role=tooltip].popup-content {
     width     : 240px;
-    padding: 20px 30px !important;
+    padding: 6px 30px 35px !important;
     border: 2px solid #E2EBF0 !important;
     box-shadow: none !important;
 }
@@ -143,8 +164,7 @@
     padding   : 5px;
     border    : 1px solid #d7d7d7;
     top: 15px;
-    left: 0;
-    transform: translate(-25%);
+    left: -45px;
 }
 
 
@@ -258,7 +278,7 @@
 }
 
 .Header_headerLogo {
-    margin    : auto 32px auto 0;
+    margin    : auto 90px auto 0;
     transition: all .1s ease-in-out
 }
 
@@ -282,7 +302,7 @@
 .Header_headerLinkArrow.Header_active,
 .Header_headerLinkArrowButton.Header_active,
 .Header_headerLink.Header_active {
-    color              : var(--text-white);
+    color              : var(--text-white) !important;
     background         : var(--primary);
     border-radius      : 999999px;
     -webkit-user-select: none;
@@ -290,6 +310,10 @@
     -ms-user-select    : none;
     user-select        : none;
     padding            : 10px 18px
+}
+.Header_headerLinkArrow.Header_active a {
+    color              : var(--text-white) !important;
+    
 }
 .Header_headerLinkArrowButton.Header_active svg path {
     stroke: var(--text-white) !important;
@@ -311,16 +335,34 @@
 } */
 
 .Header_headerLink {
-    margin-right: 40px
+    margin-right: 60px
 }
 
 .Header_headerLinkArrowButton {
     background  : none;
     border      : none;
-    margin-right: 13px;
+    margin-right: 55px;
     display     : block;
-    align-items : center;
-    gap         : 5px
+}
+
+.Header_headerLinkArrow {
+    position: relative;
+    padding-right: 30px !important;
+}
+.Header_headerLinkArrow::before  {
+        position: absolute;
+        content: '';
+        right: 10px;
+        top: calc(50% - 4px);
+        width: 13px;
+        height: 7px;
+    background:  url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L8 7L15 1' stroke='%23292929' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A") 100% 50% no-repeat;
+    background-size: 100% auto;
+
+}
+
+.Header_headerLinkArrow.Header_active::before {
+filter: brightness(0) invert(1);
 }
 
 .Header_headerButtons {
@@ -458,9 +500,12 @@
         width    : -moz-max-content;
         width    : max-content
     }
+    .Header_headerLinkArrowButton  {
+        margin-right: 30px
 
+    }
     .Header_headerLink {
-        margin-right: 13px
+        margin-right: 33px
     }
 
     .Header_notificationButton {
@@ -2193,7 +2238,11 @@
     background   : var(--white);
     border-radius: 0 9999px 9999px 9999px;
     z-index      : 50;
-    padding      : 81px 102px 0 61px
+    padding      : 1px 61px 50px 61px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: center;
 }
 
 .Ticks_second {
@@ -2202,16 +2251,25 @@
     z-index      : 40;
     background   : var(--primary);
     border-radius: 9999px 0 9999px 9999px;
-    padding      : 78px 101px 0 53px
+    padding      : 0 53px 0 53px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: center;
 }
 
 .Ticks_third {
     left         : 0;
     bottom       : 0;
     background   : var(--white);
-    z-index      : 30;
+    z-index      : 55;
     border-radius: 9999px 9999px 9999px 0;
-    padding      : 115px 83px 0 51px
+    padding      : 50px 83px 0 51px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: center;
 }
 
 .Ticks_button {
@@ -2277,7 +2335,7 @@
         z-index      : 10;
         background   : var(--white);
         border-radius: 0 9999px 9999px 9999px;
-        padding      : 81px 102px 0 61px
+        padding      : 1px 102px 30px 61px
     }
 
     .Ticks_second {
@@ -2293,7 +2351,8 @@
         right  : 0;
         z-index: 11;
         left   : unset;
-        bottom : unset
+        bottom : unset;
+        padding: 0px 83px 30px 51px;
     }
 
     .Ticks_button {
@@ -2360,6 +2419,18 @@
 
 .Action_rootAction:hover {
     background: var(--primary)
+}
+.Action_rootAction:hover .Icon_textButton {
+    color: #fff !important;
+}
+.Action_rootAction:hover .Icon_textButton svg path{
+    fill: #fff;
+}
+.Action_rootAction .Icon_textButton:hover {
+    color: #292929 !important;
+}
+.Action_rootAction .Icon_textButton:hover svg path {
+    fill: #292929
 }
 
 .Action_rootAction:hover .Action_time,
@@ -2756,7 +2827,7 @@
 .Dialog_dialogBloop p {
     font-size  : 18px;
     font-weight: 600;
-    line-height: 125%;
+    line-height: 155%;
 }
 
 .Dialog_miniText .Dialog_dialogBloop p {
