--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+    --font-family: "Montserrat", sans-serif
+}
+
 .Page_root {
     background-color: var(--background-light);
     overflow: hidden;
@@ -1844,7 +1851,8 @@
 }
 
 .Tabs_tabRoot {
-    display: flex
+    display: flex;
+    width: 100% !important;
 }
 
 
@@ -2141,6 +2149,25 @@
     overflow          : hidden
 }
 
+.media-reviews .Carousel_carouselRoot {
+    padding: 0 120px;
+}
+
+@media (max-width: 1539px) {
+    
+.media-reviews .Carousel_carouselRoot {
+    padding: 0 80px;
+}
+
+}
+@media (max-width: 1389px) {
+    
+.media-reviews .Carousel_carouselRoot {
+    padding: 0 20px;
+}
+
+}
+
 .MediaReview_head {
     padding: 48px 40px 0
 }
@@ -2302,7 +2329,12 @@
     transition    : all .3s ease-in-out
 }
 
-.UserGuilde_popupLink:after {
+.UserGuilde_popupLink:hover {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+}
+
+/* .UserGuilde_popupLink:after {
     background: none repeat scroll 0 0 transparent;
     bottom    : 0;
     content   : "";
@@ -2318,7 +2350,7 @@
 .UserGuilde_popupLink:hover:after {
     width: 100%;
     left : 0
-}
+} */
 
 @media (max-width:960px) {
     .UserGuilde_rootUserGuide {
