--- a/styles/style.css
+++ b/styles/style.css
@@ -5794,7 +5794,7 @@
     border-radius   : 16px;
     font-family     : var(--font-family);
     display         : flex;
-    justify-content : space-between;
+    justify-content : flex-start;
     align-items     : center;
     margin          : 120px 0;
     padding         : 0 120px;
@@ -5802,20 +5802,24 @@
 }
 
 .Review_block {
-    width: 46%
+    width: 60%
 }
 
 .Review_blockImg {
-    width   : 46%;
+    width   : 50%;
     position: relative
+}
+
+.Review_blockImg.Review_insideImage {
+    margin-left: 25px;
 }
 
 .Review_mask {
     -webkit-mask-image: -webkit-radial-gradient(#fff, #000);
     overflow          : hidden;
     border-radius     : 999px 999px 999px 120px;
-    height            : 320px;
-    width             : 324px
+    height            : 340px;
+    width             : 340px
 }
 
 .Review_mask img {
@@ -5830,8 +5834,8 @@
 
 .Review_insideImage {
     position: relative;
-    height  : 320px !important;
-    width   : 324px !important
+    height  : 340px !important;
+    width   : 340px !important
 }
 
 .Review_insideImage img {
@@ -5847,33 +5851,34 @@
     background-image : url(../assets/title_back.png);
     background-repeat: no-repeat;
     background-size  : cover;
-    width            : 337px;
-    height           : 119px;
+    width            : 400px;
+    height           : 100px;
     position         : absolute;
     bottom           : 0;
-    right            : 60px
+    right            : 60px;
 }
 
 .Review_insideImage .Review_titleBlock {
-    right: 0
+    right: -40px;
 }
 
 .Review_title {
     font-style : normal;
     font-weight: 700;
-    font-size  : 24px;
+    font-size  : 30px;
+    color: white;
     line-height: 40px;
     position   : absolute;
     top        : 60%;
     left       : 50%;
     white-space: nowrap;
-    transform  : translate(-50%, -50%)
+    transform  : translate(-50%, -50%);
 }
 
 .Review_text {
-    font-weight: 500;
-    font-size  : 18px;
-    line-height: 1.8;
+    font-weight: 600;
+    font-size  : 22px;
+    line-height: 33px;
     margin-left: 24px
 }
 
@@ -5889,6 +5894,12 @@
 .Review_button {
     display: block;
     margin : 40px auto 0
+}
+
+.Generic_iconRoot.Review_btn {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 56px;
 }
 
 @media (max-width:1300px) {
@@ -5953,56 +5964,56 @@
 
 .MiniFeedback_root {
     background    : var(--background-white);
-    padding       : 24px 32px;
+    padding       : 10px 20px 24px;
     border-radius : 16px;
-    min-height    : 376px;
+    min-height    : 480px;
     min-width     : 370px;
     display       : flex;
     flex-direction: column;
-    align-items   : center;
+    align-items   : flex-start;
     z-index       : 1
 }
 
 .MiniFeedback_images {
-    position: relative
+    position: relative;
+    max-width: 100%;
 }
 
 .MiniFeedback_coverBlock {
-    width   : 184px;
-    height  : 153px;
+    width   : 100%;
+    height  : 190px;
     position: relative
 }
 
 .MiniFeedback_image {
-    width        : 136px;
-    height       : 136px;
+    width        : 100%;
+    height       : 190px;
     border-radius: 48px;
     overflow     : hidden;
     background   : var(--gray-20);
-    box-shadow   : 0 40px 64px rgba(0, 0, 0, .06), 0 20px 24px rgba(0, 0, 0, .04), 0 12px 16px rgba(0, 0, 0, .04), 0 8px 8px rgba(0, 0, 0, .04), 0 4px 4px rgba(0, 0, 0, .04), 0 2px 2px rgba(0, 0, 0, .02)
 }
 
 .MiniFeedback_imageItem:first-child {
     position: absolute;
     top     : 0;
     left    : 0;
-    z-index : 3
+    z-index : 1;
 }
 
 .MiniFeedback_imageItem:nth-child(2) {
     position : absolute;
     top      : 0;
     left     : 0;
-    transform: translateX(24px);
-    z-index  : 2
+    z-index  : 2;
+    width: 83%;
 }
 
 .MiniFeedback_imageItem:nth-child(3) {
     position : absolute;
     top      : 0;
     left     : 0;
-    transform: translateX(48px);
-    z-index  : 1
+    z-index  : 3;
+    width: 65%;
 }
 
 .MiniFeedback_badge {
@@ -6023,42 +6034,60 @@
 }
 
 .MiniFeedback_title {
-    margin-top    : 16px;
+    margin-top    : 12px;
+    padding: 0 10px;
     font-size     : 22px;
     font-style    : normal;
     font-weight   : 700;
     line-height   : 30px;
     letter-spacing: 0;
-    text-align    : center;
+    text-align    : left;
     color         : var(--text-black)
 }
 
 .MiniFeedback_code {
     font-style    : normal;
     font-weight   : 600;
-    font-size     : 15px;
-    line-height   : 130%;
+    font-size     : 13px;
+    line-height   : 13px;
     color         : var(--text-gray);
     text-align    : center;
-    margin-bottom : 8px;
+    margin-top : 20px;
+    padding: 0 10px;
     text-transform: uppercase
 }
 
 .MiniFeedback_description {
     font-size         : 14px;
     font-style        : normal;
-    font-weight       : 500;
-    line-height       : 21px;
+    font-weight       : 400;
+    line-height       :  17px;
     letter-spacing    : 0;
-    text-align        : center;
+    text-align        : left;
     color             : var(--text-black);
-    margin-bottom     : 22px;
-    max-height        : 63px;
+    margin-top     : 12px;
+    padding: 0 10px;
+    max-height        : 119px;
     overflow          : hidden;
     text-overflow     : ellipsis;
     display           : -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 6;
     -webkit-box-orient: vertical
+}
+
+.MiniFeedback_descriptionWrap {
+    flex: 1 0 auto;
+}
+
+.MiniFeedback_btn p {
+    margin-right: 8px; 
+    text-transform: unset;
+    font-size: 20px;
+}
+
+.MiniFeedback_btn {
+    padding: 0 10px;
+    flex: 0 0 auto;
 }
 
 @media screen and (max-width:1500px) {
