--- a/styles/style.css
+++ b/styles/style.css
@@ -5709,14 +5709,13 @@
 }
 
 .Catalog_lines {
-    display  : flex;
-    flex-wrap: wrap;
-    gap      : 40px
+    display  : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap      : 45px
 }
 
 .Catalog_item {
     width    : 100%;
-    max-width: 30%
 }
 
 .Catalog_lines:after {
@@ -5726,9 +5725,8 @@
 }
 
 @media screen and (max-width:1244px) {
-    .Catalog_item {
-        min-width: 44%;
-        width    : 44%
+    .Catalog_lines {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -5765,9 +5763,7 @@
 
 @media screen and (max-width:658px) {
     .Catalog_lines {
-        flex-wrap     : nowrap;
-        gap           : 40px;
-        flex-direction: column
+        grid-template-columns: 1fr;
     }
 
     .Catalog_item {
